art section added

--- a/index.html
+++ b/index.html
@@ -39,26 +39,13 @@
                         Graphic Design is about the visualization and expression of ideas.
                     </p>                       
                     <h3 class="sub__heading__section"> My Daily Toolbox: </h3>
-                    <div class="sub__separator"></div>  
+                    <div class="sub__separator"></div>
                     <div class="my__tools">
                         <img src="ai.png" alt="">         
                         <img src="ps.png" alt="">
                         <img src="ae.png" alt="">
                         <img src="id.png" alt="">
-                    </div>                          
-                    <h3 class="sub__heading__section"> Offers </h3>
-                    <div class="sub__separator"></div>
-                    <div class="graphic__design__offers">
-                        <div class="offer__card">
-                            <h3 class="sub__heading__section"> 1 Hour <br> @ R 200 </h3>
-                        </div>
-                        <div class="offer__card ">
-                            <h3 class="sub__heading__section"> 1 Week <br> @ R 800 </h3>
-                        </div>  
-                        <div class="offer__card ">
-                            <h3 class="sub__heading__section"> 1 Month <br> @ R 2400 </h3>
-                        </div> 
-                    </div>                       
+                    </div>             
                 </div>   
                 <div id="development__section">
                     <div class="heading_section_box">                        
@@ -66,12 +53,12 @@
                     </div>
                     <div class="separator"></div>
                     <p>
-                        We are in the year 2022 and the technology to take us to the moon is out there, so why wait let's put wings on your business and head up into the cloud.
+                        We are in the year 2022 and we have technology that can take us to the moon, so why wait let's put wings on your business and head up into the cloud.
                     </p>
                     <p>    
                         I have a great experience when it comes to the cloud and making your business more accessible for potential clients.
                     </p>                    
-                    <h3 class="sub__heading__section"> Tools I used: </h3>
+                    <h3 class="sub__heading__section"> Toolbox: </h3>
                     <div class="sub__separator"></div>
                     <div class="my__tools">
                         <img src="vsc.png" alt="">         
@@ -79,6 +66,34 @@
                         <img src="do.png" alt="">
                         <img src="gd.png" alt="">
                     </div> 
+                </div>
+                <div id="art__section">
+                    <div class="heading_section_box">                        
+                        <h1 class="heading__section"> Arts: </h1>
+                    </div>
+                    <div class="separator"></div>
+                    <div class="art__gallery">
+                        <div class="column_art__gallery">
+                            <img src="art_gallery/Distorted.png" alt="">
+                            <img src="art_gallery/Forest.png" alt="">
+                            <img src="art_gallery/Jeep Lost In The Desert.png" alt="">
+                            <img src="art_gallery/Look Into My Eyes.jpg" alt="">
+                            <img src="art_gallery/Lost In The Desert.png" alt="">
+                            <img src="art_gallery/Lost.jpg" alt="">
+                            <img src="art_gallery/No Return.jpg" alt="">
+                            <img src="art_gallery/Peekijing.png" alt="">
+                        </div>
+                        <div class="column_art__gallery">
+                            <img src="art_gallery/Peeking.jpg" alt="">
+                            <img src="art_gallery/PsyFaces.png" alt="">
+                            <img src="art_gallery/Rebirth.jpg" alt="">
+                            <img src="art_gallery/Signiture.png" alt="">
+                            <img src="art_gallery/smile.jpg" alt="">
+                            <img src="art_gallery/Texture.png" alt="">
+                            <img src="art_gallery/The Keeper.jpg" alt="">
+                            <img src="art_gallery/Untitled-2.jpg" alt="">
+                        </div>
+                    </div>
                 </div>                
             </div>
         </div>
@@ -89,7 +104,8 @@
         <div class="navigationSpace">
             <nav class="nav__icons">
                 <button id="design_tab">Design</button>
-                <button id="develop_tab">Develop</button>
+                <button id="develop_tab">Develop</button>                
+                <button id="art_tab">Art</button>
             </nav>
         </div>
     </div>    
