--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 </div>                
             </div>
         </div>
-        <div class="circle"></div>
+        <!-- <div class="circle"></div>
         <div class="circleTwo"></div>
         <div class="circleThree"></div>
-        <div class="circleFour"></div>
+        <div class="circleFour"></div> -->
         <div class="navigationSpace">
             <nav class="nav__icons">
                 <button id="design_tab">Design</button>
