--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
                 <h1 class="my__name"> Christiaan Fourie </h1>
                 
                 <img class="profile__image" src="profile.jpg" alt="">
-                <h3 class="my__title"> Graphics & Web <br> Designer </h3>
+                <h3 class="my__title"> UX & Visual <br> Designer </h3>
                 <div class="my__social">
                     <a target="_blank" href="https://github.com/iam-krist"><i class="fa fa-github" aria-hidden="true"></i></a>
                     <a target="_blank" href="https://www.instagram.com/_iamchrist_/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                     <a target="_blank" href="https://wa.me/+27718737005"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/iamkrist"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </div>
             </div>
             
@@ -33,10 +34,10 @@
                     </div>
                     <div class="separator"></div>
                     <p>
-                        I found my passion in the design of Graphics. It's all about finding the simplist way of expression by using a digital toolbox.
+                        I found my passion in the design of Visual Graphics. It's all about finding the simplest way of expression.
                     </p>
                     <p>    
-                        Graphic Design is about the visualization and expression of ideas.
+                        This is also a study of how we see or interpret the world, it's all to fascinating how a visual or design can translate into ideas and messages.
                     </p>                       
                     <h3 class="sub__heading__section"> My Daily Toolbox: </h3>
                     <div class="sub__separator"></div>
