--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                         I have a great experience when it comes to the cloud and making your business more accessible for potential clients.
                     </p>                    
                     <p>
-                        Also, check out my currently in development app. Created with Javascript(Jquery), HTML5 & CSS.
-                        <br>
-                        <a href="https://iam-krist.github.io/Zest"> Check it Out | Zest </a>
+                        Also, check out my currently in development app. Created with Javascript(Jquery), HTML5 & CSS:
+                    </p>
+                    <p>
+                        <a class="zest_link" href="https://iam-krist.github.io/Zest"> Check it Out | Zest </a>
                     </p>
                     <h3 class="sub__heading__section"> Toolbox: </h3>
                     <div class="sub__separator"></div>
