--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         Also, check out my currently in development app. Created with Javascript(Jquery), HTML5 & CSS:
                     </p>
                     <p>
-                        <a class="zest_link" href="https://iam-krist.github.io/Zest"> Check it Out | Zest </a>
+                        <a class="zest_link" target="_blank" href="https://iam-krist.github.io/Zest"> Check it Out | Zest </a>
                     </p>
                     <h3 class="sub__heading__section"> Toolbox: </h3>
                     <div class="sub__separator"></div>
