--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="sidebar">
                 <h1 class="my__greetings"> Hi </h1>
                 <h3 class="my__intro"> I am </h3>
-                <h1 class="my__name"> Christiaan Fourie </h1>
+                <h1 class="my__name"> Christiaan </h1>
                 
                 <img class="profile__image" src="profile.jpg" alt="">
                 <h3 class="my__title"> UX & Visual <br> Designer </h3>
