--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Graphics Designer and UX Developer </title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     
@@ -28,29 +29,63 @@
             </div>
             
             <div class="content">
-                <div id="design__section">
+                <div id="about__section">
                     <div class="heading_section_box">                        
-                        <h1 class="heading__section"> Graphic Design </h1>
+                        <h1 class="heading__section"> About Me </h1>
                     </div>
                     <div class="separator"></div>
+                    <img style="border-radius: 25px; float: left; margin: 15px; border: 5px solid #d300be9c; border-left: 0px; border-right: 0px;" width="33%" src="me.png" alt="">
                     <p>
-                        I found my passion in the design of Visual Graphics. It's all about finding the simplest way of expression.
+                        I am a joyful, simple person who indulges far too frequently in the sea of information that this century provides. My fascination with digital technology began when I was about eight years old and was given access to my first computer, which piqued my interest in playing games and the possibilities they inspired.
                     </p>
                     <p>    
-                        This is also a study of how we see or interpret the world, it's all to fascinating how a visual or design can translate into ideas and messages.
-                    </p>                       
-                    <h3 class="sub__heading__section"> My Daily Toolbox: </h3>
+                        I plunge into the newest technologies knowing that they can solve a problem that has never been solved before because I've built my abilities and expertise around this technology.
+                    </p>          
+                    <h3 class="sub__heading__section"> High School </h3>     
+                    <p>
+                        When I finally went to high school I was doubting which direction to go, do I go for my passion in digital or do I follow in the footsteps of my dad who is a Mechanic Specializing in Mercedes Benz.
+                    </p>
+                    <p>
+                        This was a hard crossing road and I knew I had to make a swift choice.
+                    </p>
+                    <p>
+                        I landed in a Technical High School, perfect for following in the footsteps of my dad but on arrival, I found they also offer IT, and then it clicked…
+                    </p>
+                    <p>
+                        That’s where I am going !!
+                    </p>                    
+                    <h3 class="sub__heading__section"> Decided to start taking it seriously </h3>  
+                    <p>
+                        In my first class of Information Technology, I was sitting in anticipation to hear what it is all about excited to learn all about c++ which I completed a tutorial in the holidays. To my surprise the actual focus was Delphi Language, which had no real practical use I thought.
+                    </p>
+                    <p>
+                        Neglecting that cloud of expectation I started doing my own studies and learned HTML, CSS & Javascript which would later be my niche area.
+                    </p>
+                    <p>
+                        After high school, I’ve completed several tutorials and short courses on many areas of interest. I fully embraced a road of self-study. Having little resources and money I had to make due.
+                    </p>
+                    <h3 class="sub__heading__section"> Since </h3>
+                    <p>
+                        I now mostly do freelance websites as well as graphic design, which lead to my study of User Experience Design.
+                    </p>
+                    <p>
+                        I have created numerous designs and built many websites, also I have created a color-picking app called Zest which is on Github. My portfolio showcases some art and links to check out.
+                    </p>
+                    <p>
+                        With this feel free to connect with me if you are interested, we all have hidden talents and all we need to do is believe in ourselves.
+                    </p>
+                    <!-- <h3 class="sub__heading__section"> My Daily Toolbox: </h3>
                     <div class="sub__separator"></div>
                     <div class="my__tools">
                         <img src="ai.png" alt="">         
                         <img src="ps.png" alt="">
                         <img src="ae.png" alt="">
                         <img src="id.png" alt="">
-                    </div>             
+                    </div>              -->
                 </div>   
-                <div id="development__section">
+                <div id="projects__section">
                     <div class="heading_section_box">                        
-                        <h1 class="heading__section"> Web Develop </h1>
+                        <h1 class="heading__section"> Projects </h1>
                     </div>
                     <div class="separator"></div>
                     <p>
@@ -63,7 +98,7 @@
                         Also, check out my currently in development app. Created with Javascript(Jquery), HTML5 & CSS:
                     </p>
                     <p>
-                        <a class="zest_link" target="_blank" href="https://iam-krist.github.io/Zest"> Check Out --> Zest </a>
+                        <a class="zest_link" target="_blank" href="https://iam-krist.github.io/Zest"> Check Out  Zest </a>
                     </p>
                     <h3 class="sub__heading__section"> Toolbox: </h3>
                     <div class="sub__separator"></div>
@@ -110,8 +145,8 @@
         <div class="circleFour"></div> -->
         <div class="navigationSpace">
             <nav class="nav__icons">
-                <button id="design_tab">Design</button>
-                <button id="develop_tab">Develop</button>                
+                <button id="about_tab">About</button>
+                <button id="projects_tab">Projects</button>                
                 <button id="art_tab">Art</button>
             </nav>
         </div>
