--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
                 
             </div>
         </div>
+
+    </div>
+    <div class="download_area">
+      <a href="downloads/MyResume.pdf" download>
+        <button class="download_btn">Download Resume</button>        
+      </a>
     </div>
     
     <script src="https://use.fontawesome.com/615f9281e5.js"></script>
