instagram username update

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h4>Social Media</h4>
             <div class="my__social">
                 <a target="_blank" href="https://github.com/iam-krist"><i class="fa fa-github" aria-hidden="true"> </i>Github</a>
-                <a target="_blank" href="https://www.instagram.com/_iamchrist_/?hl=en"><i class="fa fa-instagram" aria-hidden="true"> </i>Instagram</a>
+                <a target="_blank" href="https://www.instagram.com/_i_am_krist_/?hl=en"><i class="fa fa-instagram" aria-hidden="true"> </i>Instagram</a>
                 <a target="_blank" href="https://wa.me/+27718737005"><i class="fa fa-whatsapp" aria-hidden="true"> </i>Whatsapp</a>
                 <a target="_blank" href="https://www.linkedin.com/in/iamkrist"><i class="fa fa-linkedin" aria-hidden="true"> </i>LinkedIn</a> 
                 <a target="_blank" href="https://www.behance.net/christifourie"><i class="fa fa-behance" aria-hidden="true"> </i>Behance</a>
