--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="page">
-        <div class="left_sidebar">
+        <div class="left_sidebar second_sidebar_left">
             <h4>Personal Skills & Interests</h4>
             <ul>
                 <li>Loves to draw and create art.</li>
@@ -139,7 +139,7 @@
                 <li>Staying active by doing Free-running, visiting the forest, and going surfing.</li>
             </ul>
         </div>
-        <div class="right_sidebar">
+        <div class="right_sidebar second_sidebar_right">
             <h4>Social Media</h4>
             <div class="my__social">
                 <a target="_blank" href="https://github.com/iam-krist"><i class="fa fa-github" aria-hidden="true"> </i>Github</a>
