Update Profile Picture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="profile_pic">
-        <img src="profile.jpg" alt="" />
+        <img src="profile.jpeg" alt="" />
       </div>
       <div class="description">
         <h1>Christiaan Fourie</h1>
@@ -122,7 +122,7 @@
     <div class="second_header">
         <h1>More About..</h1>
         <div class="profile_pic">
-            <img src="profile.jpg" alt="" />
+            <img src="profile.jpeg" alt="" />
         </div>
     </div>
     <div class="page">
