--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="description">
         <h1>Christiaan Fourie</h1>
-        <h4>UX Designer</h4>
+        <h4>Visual Artist & Designer</h4>
         <p>
           Hi! I'm Christiaan, I am a 23 year old guy that loves the world of
           Technology & User Experience.
