--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Graphics Designer and UX Developer</title>
+    <title>Visual Artist & Designer</title>
     <link rel="icon" type="image/x-icon" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <style>
@@ -39,7 +39,7 @@
         top: 0;
         left: 0;
         margin-left: -35px;
-        margin-top: -35px;
+        margin-top: -65px;
         z-index: 11;
         height: 300px;
         border-radius: 15px;
@@ -48,32 +48,28 @@
         opacity: 0.9;
       }
       .github-image:hover {
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin-left: -15px;
-        margin-top: -15px;
-        z-index: 11;
-        height: 305px;
-        border-radius: 15px;
+        height: 315px;
       }
 
       .text-content {
         padding: 2em;
-        background-color: #fff;
+        background-color: #ffffff63;
         position: relative;
         z-index: 1;
       }
-
       .btn {
         display: inline-block;
         padding: 0.5em 1em;
         background-color: #5CE1E6;
-        color: #fff;
+        color: #000000;
         text-decoration: none;
         border-radius: 4px;
         margin-top: 1em;
+        transition: all 1s;
       } 
+      .btn:hover {
+        font-size: x-large;
+      }
       .typing {
         display: inline-block;
         overflow: hidden;
