--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container">
       
       <div style="text-align: end;" class="text-content">
-        <img class="github-image" src="githubProfileSnap.jpg" alt="Image">
+        <img class="github-image" src="./githubProfileSnap.jpg" alt="Image">
         <h1><span style="background-color: #5CE1E6;">Github</span></h1>
         <h3>Where we code...</h3>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo mi vel congue egestas. Nullam ullamcorper, nunc id pharetra scelerisque, justo risus commodo nulla, ac feugiat dui ipsum a diam.</p> -->
