--- a/index.html
+++ b/index.html
@@ -70,33 +70,7 @@
       .btn:hover {
         font-size: x-large;
       }
-      .typing {
-        display: inline-block;
-        overflow: hidden;
-        white-space: nowrap;
-        font-size: 2em;
-      }
-
-      .animated-text {
-        animation: type 4s steps(30, end), blink-caret .75s step-end infinite alternate;
-        overflow: hidden;
-        white-space: nowrap;
-      }
-
-      @keyframes type {
-        from {
-          width: 0;
-        }
-      }
-
-      @keyframes blink-caret {
-        from, to {
-          border-color: transparent;
-        }
-        50% {
-          border-color: white;
-        }
-      }
+      
 
     </style>
   </head>
@@ -153,7 +127,7 @@
     <div class="container">
       
       <div style="text-align: end;" class="text-content">
-        <img class="github-image" src="githubProfileSnap.jpg" alt="Image">
+        <iframe class="github-image" src="https://github.com/" frameborder="0"></iframe>
         <h1><span style="background-color: #5CE1E6;">Github</span></h1>
         <h3>Where we code...</h3>
         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo mi vel congue egestas. Nullam ullamcorper, nunc id pharetra scelerisque, justo risus commodo nulla, ac feugiat dui ipsum a diam.</p> -->
