--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <style>
       .icon-row {
-        display: flex;
+        display: relative;
+        right: 0;
       }
       
       .icon-container {
@@ -20,6 +21,7 @@
         align-items: center;
         width: 50px;
         height: 50px;
+        margin-top: 27px;
         margin-right: 27px;
         background-color: #ffffff00;
           border: 1px solid #5CE1E6;
@@ -135,25 +137,25 @@
       </div>
       <div class="description">
         <h1>Christiaan Fourie</h1>
-        <h4>Visual Artist & Designer</h4>
-        <div class="icon-row">
-          <a target="_blank" href="https://github.com/iam-krist" class="icon-container">
-            <i class="fa fa-github"></i>
-          </a>
-          <a target="_blank" href="https://www.instagram.com/_i_am_krist_/?hl=en" class="icon-container">
-            <i class="fa fa-instagram"></i>
-          </a>
-          <a target="_blank" href="https://wa.me/+27718737005" class="icon-container">
-            <i class="fa fa-whatsapp"></i>
-          </a>
-          <a target="_blank" href="https://www.linkedin.com/in/iamkrist" class="icon-container">
-            <i class="fa fa-linkedin"></i>
-          </a>
-          <a target="_blank" href="https://codepen.io/iam-krist" class="icon-container">
-            <i class="fa fa-codepen"></i>
-          </a>
-        </div>       
+        <h4>Visual Artist & Designer</h4>              
       </div>
+      <div class="icon-row">
+        <a target="_blank" href="https://github.com/iam-krist" class="icon-container">
+          <i class="fa fa-github"></i>
+        </a>
+        <a target="_blank" href="https://www.instagram.com/_i_am_krist_/?hl=en" class="icon-container">
+          <i class="fa fa-instagram"></i>
+        </a>
+        <a target="_blank" href="https://wa.me/+27718737005" class="icon-container">
+          <i class="fa fa-whatsapp"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/iamkrist" class="icon-container">
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a target="_blank" href="https://codepen.io/iam-krist" class="icon-container">
+          <i class="fa fa-codepen"></i>
+        </a>
+      </div> 
     </header>
     
     <div class="description">
