Change Resume Download Button To Theme

--- a/index.html
+++ b/index.html
@@ -326,9 +326,7 @@
 
     </div>-->
     <div class="download_area">
-      <a href="downloads/MyResume.pdf" download>
-        <button class="download_btn">Download Resume</button>
-      </a>
+      <a target="_blank" href="downloads/MyResume.pdf" download class="btn">Download Resume</a>
     </div> 
     
     <script src="https://use.fontawesome.com/615f9281e5.js"></script>
