--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 
             <div class="social-links">
               <ul>
-                <li><a href="https://github.com/iam-krist" target="_blank"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://github.com/christiaan-fourie" target="_blank"><i class="fab fa-github"></i></a></li>
                 <li><a href="https://www.instagram.com/_i_am_krist_/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://wa.me/+27718737005" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/iamkrist" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="https://codepen.io/iam-krist" target="_blank"><i class="fab fa-codepen"></i></a></li>
+                <!-- <li><a href="https://codepen.io/iam-krist" target="_blank"><i class="fab fa-codepen"></i></a></li> -->
               </ul>
             </div>
 
@@ -887,6 +887,9 @@
                       <div class="portfolio-content">
 
                         <ul class="grid-filters portfolio-filters">
+                          <li>
+                            <a class="filter btn btn-sm btn-link" data-filter=".front-end">Front End</a>
+                          </li>   
                           <li class="active">
                             <a class="filter btn btn-sm btn-link" data-filter=".category_all">All</a>
                           </li>
@@ -895,7 +898,7 @@
                           </li>
                           <li>
                             <a class="filter btn btn-sm btn-link" data-filter=".category_visual-art">Visual Art</a>
-                          </li>                         
+                          </li>                      
                         </ul>
 
                         <!-- Portfolio Grid -->
