--- a/index.html
+++ b/index.html
@@ -887,12 +887,12 @@
                       <div class="portfolio-content">
 
                         <ul class="grid-filters portfolio-filters">
-                          <li>
-                            <a class="filter btn btn-sm btn-link" data-filter=".front-end">Front End</a>
-                          </li>   
                           <li class="active">
                             <a class="filter btn btn-sm btn-link" data-filter=".category_all">All</a>
                           </li>
+                          <li>
+                            <a class="filter btn btn-sm btn-link" data-filter=".front-end">Web Development</a>
+                          </li>   
                           <li>
                             <a class="filter btn btn-sm btn-link" data-filter=".category_youtube-videos">YouTube Videos</a>
                           </li>
@@ -903,6 +903,18 @@
 
                         <!-- Portfolio Grid -->
                         <div class="portfolio-grid two-columns">
+                          <!-- Figure Front-End 1 -->
+                          <figure class="item lbvideo category_all category_youtube-videos">
+                            <div class="portfolio-item-img">
+                              <iframe width="100%" src="https://www.youtube.com/embed/hvaMl3qivGE?autoplay=0&mute=1&controls=0&loop=1&showinfo=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                              <a href="https://www.youtube.com/embed/bg0gv2YpIok" class="lightbox mfp-iframe"></a>
+                            </div>
+
+                            <i class="fas fa-video"></i>
+                            <h4 class="name"><span>YouTube</span>The Genesis</h4>
+                            <span class="category">The Genesis</span>
+                          </figure>
+
                           <!-- Figure Youtube 1 -->
                           <figure class="item lbvideo category_all category_youtube-videos">
                             <div class="portfolio-item-img">
