--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                       <div class="fun-fact gray-default">
                         <i class="lnr lnr-heart"></i>
                         <h4>Happy Clients</h4>
-                        <span class="fun-fact-block-value">99</span>
+                        <span class="fun-fact-block-value">50+</span>
                         <span class="fun-fact-block-text"></span>
                       </div>
                     </div>
@@ -208,7 +208,7 @@
                       <div class="fun-fact gray-default">
                         <i class="lnr lnr-clock"></i>
                         <h4>Working Hours</h4>
-                        <span class="fun-fact-block-value">4,380</span>
+                        <span class="fun-fact-block-value">5,000+</span>
                         <span class="fun-fact-block-text"></span>
                       </div>
                     </div>
@@ -217,7 +217,7 @@
                       <div class="fun-fact gray-default">
                         <i class="lnr lnr-star"></i>
                         <h4>Cups of Coffee</h4>
-                        <span class="fun-fact-block-value">1 460</span>
+                        <span class="fun-fact-block-value">460</span>
                         <span class="fun-fact-block-text"></span>
                       </div>
                     </div>
